# langchain-agents-tools

./: README.md  ipca.db  ipca_scraper.py  pyproject.toml
01-native-tools/: python_repl.py  web_search.py  wikipedia_search.py  youtube_search.py
02-create-agents/: agent-with-python-repl-tool.py  agent-with-search-tool.py
03-create-react-agent/: 01.py
04-create-agent-with-db/: 01.py  02.py  03.py
