[tool.poetry]
name = "ai-agents-and-tools"
version = "0.1.0"
description = ""
authors = ["Kauanrodrigues01m <kauanrl09@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain-groq = "^0.2.3"
duckduckgo-search = "^7.2.1"
langchain-experimental = "^0.3.4"
wikipedia = "^1.4.0"
youtube-search = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
